# struct-lint

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
docs/: design.md
docs/plans/: 2026-01-31-multi-file-cli-design.md  2026-01-31-multi-file-cli-plan.md
src/: main.rs
test/: test_structs.c
test/blog/: FINDINGS.md  Makefile  REPRODUCE.md  gen_svg.py  sensor_reading.c  sensor_reading_evolved.c
