[package]
name = "struct-lint"
version = "0.1.0"
edition = "2024"
description = "Detect struct alignment issues in embedded firmware via DWARF debug info"
license = "MIT"
repository = "https://github.com/chrismerck/struct-lint"
readme = "README.md"
keywords = ["embedded", "alignment", "dwarf", "elf", "firmware"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
gimli = "0.33"
object = { version = "0.38", features = ["read"] }
regex = "1"
walkdir = "2"
